# repoatlas

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .secretlintrc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IDEAS.md  LICENSE  RATIONALE.md  README.md  SECURITY.md  VERSIONING.md  conventions.bash.md  conventions.python.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
app/manual_tests/: README.md  codegroupanalyze.py  codemerge.py
app/src/: logging.py
app/src/app/: java_analyze.py
app/src/codeanalyzer/: ARCHITECTURE.md  AST.md  DESIGN.md  FEATURES.md  README.md  REFACTOR.md  analyzer.py  ast_constants.py  autowire_resolver.py  classification.py  code_analyzer_config.py  code_visualizer.py  codeanalyzer_sample_config.json  constant_resolver.py  constants.json  import_resolver.py  models.py  parser.py  path_resolver.py  property_resolver.py  source_replacer.py  type_resolver.py  util.py
app/src/codetools/: codetools.py  ignore.py  logging.py  merge.py
app/tests/: CODEANALYZER-TEST-DESIGN.md  test_docstrings_collection.md
app/tests/integration/: test_codemerge_integration.py
app/tests/integration/codeanalyzer/: conftest.py  test_abstraction_type.py  test_analyzer_dump_classes.py  test_analyzer_integration.py  test_parser_edge_cases.py  test_resolver_pipeline.py
app/tests/unit/codeanalyzer/: TODO.md  conftest.py  test_analyzer_core.py  test_analyzer_refresh.py  test_autowire_resolver.py  test_blank_line_collapse.py  test_classification.py  test_code_analyzer_config.py  test_constant_resolver.py  test_import_resolver.py  test_interface_autowire.py  test_local_name_resolver.py  test_models.py  test_parser.py  test_path_resolver.py  test_property_resolver.py  test_reference_models.py  test_type_resolver.py  test_visualizer.py
app/tests/unit/codeanalyzer/test_samples/: EntityController.java  QualifiedController.java  global_constants.json  manual_test_real_file_parser.py
app/tests/unit/codetools/: test_codetools.py  test_ignore.py  test_merge.py
demo/: CLAUDE.md
demo/section_20/: .dockerignore  .gitignore  DEMO.md  Dockerfile  README.md  docker-compose.yml  mvnw  mvnw.cmd  pom.xml
demo/section_20/accounts/: pom.xml
demo/section_20/accounts/src/main/resources/: application.properties  application.yml
demo/section_20/cards/: pom.xml
demo/section_20/cards/src/main/resources/: application.yml
demo/section_20/common/: pom.xml
demo/section_20/loans/: pom.xml
demo/section_20/loans/src/main/resources/: application.yml
demo/section_20/output/: analysis.json  analysis.md  analysis.txt  class-diagram.mmd  flow-diagram.mmd
experimental/: README.md  code_context_tools.py  debug_code_context.py  install_mcp_code_context.py
scripts/: dependency_checker.py  scfw-audit.sh
(+15 files in other folders)
