[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repoatlas"
version = "0.1.0"
authors = [
    { name = "Alec Lazarescu", email = "alecl@alecl.com" }
]
description= "A tool for creating LLM codebase context by analyzing and visualizing code repositories to identify connections between services, repositories, and components"
readme = "README.md"
license = "Apache-2.0"
license-files = [
    "LICENSE",
]
requires-python = ">=3.12, <3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-dotenv>=1.1.0,<2.0.0",
    "pydantic>=2.13.4,<3.0.0",
    "puremagic>=2.2.0,<3.0.0",
    #   "tiktoken>=0.9.0,<1.0.0", # Optional: [codecontext] For token counting
    #   "diskcache>=5.4.0,<6.0.0",
    "tree-sitter==0.25.2",
    "tree-sitter-language-pack==1.8.1",
    "json5>=0.14.0,<0.15.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.1.0,<10.0.0",
    "pytest-cov>=7.1.0,<8.0.0",
    "pyfakefs>=6.2.0,<7.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
]
dev = [
    "ruff==0.15.17",
    "pyright>=1.1.410,<2.0.0",
    "pre-commit>=4.6.0,<5.0.0",
    "mcp>=1.27.2,<2.0.0",
    "mcp[cli]>=1.27.2,<2.0.0",
    "packaging>=26.2,<27.0.0",
    "requests>=2.34.2,<3.0.0",
    "rich>=15.0.0,<16.0.0",
    "tomli>=2.4.1,<3.0.0",
    "tomlkit>=0.15.0,<1.0.0",
    "bump-my-version>=1.3.0,<2.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["app.tests*"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
python_files = ["test_*.py"]
#norecursedirs = ["app/tests/unit/codecontext"]
addopts = "-v -s --cov=app.src --import-mode=importlib "

[tool.ruff]
line-length = 99
target-version = "py312"
extend-exclude = [".venv", "venv", "__pycache__", "*.egg-info", "build", "dist", ".env"]
lint.select = ["E", "F", "B", "I", "UP", "SIM", "C4"]
lint.ignore = ["E203", "E501", "F401", "UP035", "SIM102", "B017"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = []

[tool.ruff.lint.per-file-ignores]
"app/manual_tests/codegroupanalyze.py" = ["E402"]
"app/src/app/java_analyze.py" = ["E402"]
"app/tests/integration/test_codemerge_integration.py" = ["E402"]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"

[tool.pyright]
exclude = ["app/src/codetools", "app/tests", ".venv", "venv", "**/node_modules", "**/__pycache__", "**/.*"]

[tool.bumpversion]
current_version = "0.0.11"
commit = true
tag = true
tag_name = "v{new_version}"
commit_message = "chore(release): bump version to {new_version}"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
